--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ span{
 .container{
   width: 100%;
   height: 100vh;
-  background-image: url(back.jpg);
+  background-image: url(back2.jpeg);
   background-position: center;
   background-size: cover;
   padding-top: 35px;
